@@ -1,11 +1,13 @@
 Version 1.1.3
 [list]
-[*]Added a new option to use vanilla sized biomes in standard BTA generation.
+[*]Added a new option to use vanilla sized biomes in standard BTA generation. The world types are "BTASmall" and "BTASmallDeco" for server owners.
+[*]Added the ability for clay to replace grass in standard (waterlogged) generation. This allows clay to form on shores in grass like it does in sand variants.
 [*]Added the ability for tall grass, reeds, and saplings to grow on grassy clay.
 [*]Changed how the end generates in all BTA world types to create slightly more interesitng terrain.
-[*]Changed (increased) the height to which iron will generate in skylands given that at any given time the player is likely to be much higher in elevation that in vanilla.
+[*]Changed (increased) the height to which iron will generate from 64 to 80 in skylands given that at any given time the player is likely to be much higher in elevation that in vanilla.
 [*]Changed sugar cane in skylands to no longer be restricted by biome given how rarely it still generates.
 [*]Fixed an issue where fungal forest and fungal forest lowlands did not have the same grass color.
+[*]Fixed an issue where clay patches that overlapped would always generate dirt clay even if the rest of the patch was based on a different block type.
 [/list]
 
 Version 1.1.2
